overhaul of client class, making methods without provided URL non-static